--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
         "tailwindcss": "^3.4.17",
         "vite": "^6.2.4",
         "vue": "^3.3.13"
+    },
+    "dependencies": {
+        "path": "^0.12.7",
+        "pdfjs-dist": "^3.11.174"
     }
 }
